--- a/TWITTER_WEB/src/main/webapp/login.xhtml
+++ b/TWITTER_WEB/src/main/webapp/login.xhtml
@@ -93,13 +93,13 @@
                     <p:messages closable="true"/>
 
                     <div class="form-group has-feedback">
-                        <p:inputText value="#{logonMB.email}" type="email" styleClass="form-control" placeholder="Just type any value"
+                        <p:inputText id="inputEmail" value="#{logonMB.email}" type="email" styleClass="form-control" placeholder="Just type any value"
                                      required="true"
                                      requiredMessage="Email is required."/>
                         <i class="fa fa-envelope form-control-feedback" ></i>
                     </div>
                     <div class="form-group has-feedback">
-                        <p:inputText value="#{logonMB.password}" type="password" styleClass="form-control"
+                        <p:inputText id="inputPassword" value="#{logonMB.password}" type="password" styleClass="form-control"
                                      placeholder="Just type any value" required="true"
                                      requiredMessage="Password is required."/>
                         <i class="fa fa-lock form-control-feedback" style="font-size: 18px"></i>
@@ -110,7 +110,7 @@
                         </div>
                         <p:spacer height="10"/>
                         <div class="col-xs-12">
-                            <p:commandButton styleClass="btn btn-success btn-block" action="#{logonMB.login}" onclick="showBar()" oncomplete="if(args.validationFailed){hideBar()}"
+                            <p:commandButton id="buttonSingin" styleClass="btn btn-success btn-block" action="#{logonMB.login}" onclick="showBar()" oncomplete="if(args.validationFailed){hideBar()}"
                                              value="Sign In" update="@form"/>
                         </div>
                     </div>
